# nutriscan-ai-repo

./: .env  .gitignore  auth.py  config.yaml  main.py  packages.txt  requirements.txt  sites-enabled  styles.css  utils.py
.streamlit/: config.toml
old_requirements/: pyproject.toml
