[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "none"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-generativeai (>=0.8.4,<0.9.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pyzbar (>=0.1.9,<0.2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sift-stack-py (>=0.4.2,<0.5.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "extra-streamlit-components (>=0.1.71,<0.2.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "twilio (>=9.5.0,<10.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "trycourier (>=6.2.1,<7.0.0)",
    "streamlit-authenticator (>=0.4.2,<0.5.0)",
    "streamlit-login-auth-ui (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
